# OucWebAPI

./: .gitignore  README.md  account.ini  example_usage.ipynb  example_useage_2.ipynb  example_useage_3.ipynb  main.py  pyproject.toml
ouc_course_tool/: __init__.py
ouc_course_tool/config/: __init__.py  base_request_config.py  fetcher_config.py  login_config.py
ouc_course_tool/core/: __init__.py  account_validation.py  course_fetcher.py  search_param_handle.py  table_fetcher.py
ouc_course_tool/data/: __init__.py  courses.py  schedule.py
ouc_course_tool/util/: __init__.py  data_handle.py  draw_function.py
tests/: get_courses_from_mul_params.pickle  test_account_validation.py  test_config.py  test_course_fetcher.py  test_course_result.html  test_schedule.py  test_table_fetcher.py
tests/test_resource/: test_account_validation_result.html  test_account_validation_result2.html
